<resources>
    <string name="app_name">OC Pizza</string>
    <string name="connexion">Connexion</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="require">Champ obligatoire</string>
    <string name="inscription">Inscription</string>
    <string name="pseudo">Pseudo</string>
    <string name="adresse">Adresse</string>
    <string name="sentence">Vous avez déjà un compte? Connectez-vous!</string>
    <string name="check">Valider</string>
    <string name="mot_de_passe_confirmation">confirmer mot de pasee</string>
    <string name="submit">Valider</string>
    <string name="inscription_pro">Inscription Pro</string>
    <string name="sentence_pro">Choisissez un mot de passe personnel:</string>
</resources>